Fix alert-icon color for dark mode

--- a/less/alerts.less
+++ b/less/alerts.less
@@ -97,7 +97,7 @@
 				background-color: @color-d2;
 
 				.alert-icon {
-					color: @color-d2;
+					color: @color-l2;
 				}
 			}
 
@@ -106,7 +106,7 @@
 				background-color: @color-d2;
 
 				.alert-icon {
-					color: @color-d2;
+					color: @color-l2;
 				}
 			}
 
@@ -115,7 +115,7 @@
 				background-color: @color-d2;
 
 				.alert-icon {
-					color: @color-d2;
+					color: @color-l2;
 				}
 			}
 
@@ -124,7 +124,7 @@
 				background-color: @color-d2;
 
 				.alert-icon {
-					color: @color-d2;
+					color: @color-l2;
 				}
 			}
 
@@ -133,7 +133,7 @@
 				background-color: @color-d2;
 
 				.alert-icon {
-					color: @color-d2;
+					color: @color-l2;
 				}
 			}
 		}
